--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Tara Maranda</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="js/index.js">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -86,7 +87,7 @@
     <p> Hello! I am a UX/UI designer based in the Twin Cities. I enjoy taking complex problems and turning them into simple and beautiful intrface designs.</p>
     <a href="#" class="btn btn-default btn-lg">
       <span class="glyphicon glyphicon-search"></span> Search
-    </a>
+    </a>       
   </div>
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
@@ -117,7 +118,12 @@
         </ul>
     </footer> 
   </footer>
-  
+   
+  <div class="preloader">
+    <img src="images/loading.png">
+  </div>
   </body>
   </html>
+  
+
   
